src/routes/style.css
@font-face {
    font-family: 'Adwaita Sans';
    src: url('$lib/assets/fonts/adwaita-sans.ttf');
    font-display: swap;
}

@font-face {
    font-family: 'Adwaita Mono';
    src: url('$lib/assets/fonts/adwaita-mono.ttf');
    font-display: swap;
}

:root {
    --font-header: 'Adwaita Sans', sans-serif;
    --font-heading: 'Adwaita Sans', sans-serif;
    --font-main: 'Adwaita Sans', sans-serif;
    --font-mono: 'Adwaita Mono', monospace;
    --background-main: #161419;
    --background-content: #201b27;
    --text-color: #e7e5e4;
    --darker-text-color: #acacac;
    --accent-color: #aa5edd;
    --darker-accent-color: #7d3fa7;
    --border-radius: 20px;
    --border: 2px solid var(--background-main);
    --padding: 30px;
}

body {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    color: var(--text-color);
    background-color: var(--background-main);
    font-family: var(--font-main);
}

.accent {
    color: var(--accent-color)
}

.layout {
    max-width: 1200px;
    width: 100%;
    display: grid;
    grid-area: 
        "header" auto
        "main" 1fr
        "footer" auto;
    gap: 8px;
}

header {
    display: flex;
    justify-content: space-between;
    padding: var(--padding);
    background-color: var(--background-content);
    border-radius: var(--border-radius);
    align-items: center;
}



.header-title {
    font-family: var(--font-header);
    font-size: 2.8em;
    font-weight: 700;
    color: var(--text-color);
    text-decoration: none;
    line-height: 1;
    margin-inline-start: 10px;
}

nav a {
    display: inline-block;
    background-color: var(--accent-color);
    color: var(--text-color);
    border-radius: var(--border-radius);
    padding-inline: 25px;
    padding-block: 15px;
    text-decoration: none;
    font-family: var(--font-header);
    font-weight: 700;
    font-size: 1em;
    margin-inline-end: 10px;
}

nav a:hover {
    color: var(--text-color);
    background-color: var(--darker-accent-color);
}

main {
    line-height: 1.5;
    background-color: var(--background-content);
    border-radius: var(--border-radius);
    padding: var(--padding);
}

code {
    font-family: var(--font-mono);
}

main h1,
main h2,
main h3,
main h4,
main h5,
main h6 {
  font-family: var(--heading-font);
  margin-bottom: 0;
}

main h1:first-child,
main h2:first-child,
main h3:first-child,
main h4:first-child,
main h5:first-child,
main h6:first-child {
  margin-top: 0;
}

main ol,
main ul {
  margin: 0.5em 0;
  padding-left: 1.5em;
}

main ol li,
main ul li {
  margin-bottom: 0.2em;
  line-height: 1.3;
}

main h1 {
  font-size: 1.8em;
}

main h2 {
  font-size: 1.5em;
}

main h3 {
  font-size: 1.3em;
}

main h4 {
  font-size: 1.2em;
}

main h5 {
  font-size: 1.1em;
}

main h6 {
  font-size: 1em;
}


table {
  width: 100%;
}

th {
  border: var(--border);
  padding: 5px;
}

td {
  border: var(--border);
  padding: 5px;
}

hr {
    color: var(--accent-color);
}

.hero {
    font-family: var(--font-heading);
    padding-block: 2em;
    font-size: 3em;
    font-weight: 800;
    text-align: center;
    justify-content: center;
}

a {
    color: var(--text-color);
}

a:hover {
    color: var(--darker-text-color);
}

nav a:active {
    scale: 0.95;
}

footer {
    border-radius: var(--round-borders);
    background-color: var(--background-content);
    border-radius: var(--border-radius);
    padding: var(--padding);
}

.footer-content {
    display: flex;
    justify-content: center;
    text-align: center;
}

.smol {
    font-size: 0.8em;
    color: var(--darker-text-color);
}

.ring-link {
    display: inline-block;
    background-color: var(--accent-color);
    color: var(--text-color);
    border-radius: var(--border-radius);
    padding-inline: 18px;
    padding-block: 15px;
    text-decoration: none;
    font-family: var(--font-header);
    font-weight: 700;
    font-size: 1em;
}

.ring-link:hover {
    color: var(--text-color);
    background-color: var(--darker-accent-color);
}

.ring-link:active {
    scale: 0.95;
}

@media (max-width: 850px) {
    header {
        display: grid;
        text-align: center;
        justify-content: center;
    }

    .header-title {
        margin: 0;
        padding-bottom: 30px;
    }

    nav a {
        display: grid;
        text-align: center;
        margin: 0;
        margin-bottom: 10px;
    }

    .hero {
        font-size: 2em;
    }
}

